--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/kampung_inggris1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>KoGo HP</h4>
+              <h4>Magazine</h4>
               <p>Web</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/kampung_inggris1.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
