--- a/magazine.html
+++ b/magazine.html
@@ -48,9 +48,9 @@
           <div class="col-lg-8">
             <!-- <h2 class="portfolio-title">This is an example of portfolio detail</h2> -->
             <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/KoGoHP.png" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/KoGoHP1.png" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/KoGoHP2.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/kampung_inggris1.png" class="img-fluid" alt="">
+<!--               <img src="assets/img/portfolio/KoGoHP1.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/KoGoHP2.png" class="img-fluid" alt=""> -->
             </div>
           </div>
 
