--- a/magazine.html
+++ b/magazine.html
@@ -59,8 +59,8 @@
             <ul>
               <li><strong>Category</strong>: Web</li>
               <!-- <li><strong>Client</strong>: ASU Company</li> -->
-              <li><strong>Project date</strong>: 10 Januari, 2022</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+              <li><strong>Project date</strong>: 10 Januari, 2023</li>
+              <li><strong>Project URL</strong>: <a href="https://kampung-inggris.co.id/post">kampung-inggris.co.id/postd</a></li>
             </ul>
 
             <p>
