--- a/magazine.html
+++ b/magazine.html
@@ -60,11 +60,13 @@
               <li><strong>Category</strong>: Web</li>
               <!-- <li><strong>Client</strong>: ASU Company</li> -->
               <li><strong>Project date</strong>: 10 Januari, 2023</li>
-              <li><strong>Project URL</strong>: <a href="https://kampung-inggris.co.id/post">kampung-inggris.co.id/postd</a></li>
+              <li><strong>Project URL</strong>: <a href="https://kampung-inggris.co.id/post">kampung-inggris.co.id/post</a></li>
             </ul>
 
             <p>
-              KoGo HP (Konco Golek Handphone) adalah sebuah aplikasi berbasis web yang berfungsi untuk membantu siapapun yang sedang bingung untuk mencari rekomendasi handphone yang sesuai dengan kebutuhan. Sehingga calon pembeli tidak salah memilih handphone yang akan dibeli.
+              Website Kampung Inggris merupakan sumber informasi yang sangat penting bagi orang-orang yang ingin mengenal lebih jauh
+              tentang destinasi ini. Website ini menyediakan berbagai informasi tentang program belajar bahasa Inggris yang tersedia, 
+              paket-paket pelatihan yang ditawarkan, dan fasilitas yang disediakan di Kampung Inggris.
             </p>
           </div>
 
