--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h1><a href="index.html">Muhammad Kukuh.F</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a <span>Programmer </span></h2>
+      <h2>I'm a <span>Website Builder </span></h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -517,7 +517,7 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
@@ -531,7 +531,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
