--- a/index.html
+++ b/index.html
@@ -535,13 +535,13 @@
         
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/kampung_inggris1.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Global_English.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Magazine</h4>
+              <h4>Global English</h4>
               <p>Web</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/kampung_inggris1.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="magazine.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/Global_English.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="Global_English.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
