--- a/Global_English.html
+++ b/Global_English.html
@@ -48,7 +48,7 @@
           <div class="col-lg-8">
             <!-- <h2 class="portfolio-title">This is an example of portfolio detail</h2> -->
             <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/kampung_inggris1.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Global_English.png" class="img-fluid" alt="">
 <!--               <img src="assets/img/portfolio/KoGoHP1.png" class="img-fluid" alt="">
               <img src="assets/img/portfolio/KoGoHP2.png" class="img-fluid" alt=""> -->
             </div>
@@ -59,15 +59,15 @@
             <ul>
               <li><strong>Category</strong>: Web</li>
               <!-- <li><strong>Client</strong>: ASU Company</li> -->
-              <li><strong>Project date</strong>: 10 Januari, 2023</li>
-              <li><strong>Project URL</strong>: <a href="https://kampung-inggris.co.id/post">kampung-inggris.co.id/post</a></li>
+              <!--<li><strong>Project date</strong>: 10 Januari, 2023</li> -->
+              <li><strong>Project URL</strong>: <a href="https://globalenglish.co.id/">Global English</a></li>
             </ul>
 
-            <p>
+            <!-- <p>
               Website Kampung Inggris merupakan sumber informasi yang sangat penting bagi orang-orang yang ingin mengenal lebih jauh
               tentang destinasi ini. Website ini menyediakan berbagai informasi tentang program belajar bahasa Inggris yang tersedia, 
               paket-paket pelatihan yang ditawarkan, dan fasilitas yang disediakan di Kampung Inggris.
-            </p>
+            </p> -->
           </div>
 
         </div>
@@ -82,7 +82,7 @@
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    <!--Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
   </div>
 
   <!-- Vendor JS Files -->
