--- a/index.html
+++ b/index.html
@@ -505,15 +505,29 @@
 
       <div class="row portfolio-container">
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Nonik_Ice_Cream.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 1</h4>
-              <p>App</p>
+              <h4>Nonik Ice Cream</h4>
+              <p>Web</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/Nonik_Ice_Cream.png" data-gall="portfolioGallery" class="venobox" title="Web"><i class="bx bx-plus"></i></a>
+                <a href="Nonik.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Elearning.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Elearning</h4>
+              <p>Web</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Elearning.png" data-gall="portfolioGallery" class="venobox" title="Web"><i class="bx bx-plus"></i></a>
+                <a href="Elearning.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -521,13 +535,13 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/KoGoHP.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Kelas_Bahasa.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>KoGo HP</h4>
+              <h4>Kelas Bahasa</h4>
               <p>Web</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/KoGoHP.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/Kelas_Bahasa.png" data-gall="portfolioGallery" class="venobox" title="Web"><i class="bx bx-plus"></i></a>
+                <a href="Kelas_Bahasa.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -540,7 +554,7 @@
               <h4>Global English</h4>
               <p>Web</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Global_English.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/Global_English.png" data-gall="portfolioGallery" class="venobox" title="Web"><i class="bx bx-plus"></i></a>
                 <a href="Global_English.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
