--- a/index.html
+++ b/index.html
@@ -496,8 +496,8 @@
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
-            <!-- <li data-filter=".filter-app">App</li>
-            <li data-filter=".filter-card">Card</li> -->
+            <!-- <li data-filter=".filter-app">App</li> -->
+            <li data-filter=".filter-Freelance">Freelance</li>
             <li data-filter=".filter-web">Web</li>
           </ul>
         </div>
@@ -505,14 +505,14 @@
 
       <div class="row portfolio-container">
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-Freelance">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Nonik_Ice_Cream.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Nonik Ice Cream</h4>
               <p>Web</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Nonik_Ice_Cream.png" data-gall="portfolioGallery" class="venobox" title="Web"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/Nonik_Ice_Cream.png" data-gall="portfolioGallery" class="venobox" title="Freelance"><i class="bx bx-plus"></i></a>
                 <a href="Nonik.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
