--- a/Nonik.html
+++ b/Nonik.html
@@ -57,7 +57,7 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web</li>
+              <li><strong>Category</strong>: Freelance</li>
               <!-- <li><strong>Client</strong>: ASU Company</li> -->
               <!--<li><strong>Project date</strong>: 10 Januari, 2023</li> -->
               <li><strong>Project URL</strong>: <a href="https://nonikicecream.com/">Nonik Ice Cream</a></li>
