--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
             <!-- <li data-filter=".filter-app">App</li> -->
-            <li data-filter=".filter-Freelance">Freelance</li>
+            <li data-filter=".filter-freelance">Freelance</li>
             <li data-filter=".filter-web">Web</li>
           </ul>
         </div>
@@ -505,7 +505,7 @@
 
       <div class="row portfolio-container">
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-Freelance">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-freelance">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Nonik_Ice_Cream.png" class="img-fluid" alt="">
             <div class="portfolio-info">
