--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             <img src="assets/img/portfolio/Nonik_Ice_Cream.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Nonik Ice Cream</h4>
-              <p>Web</p>
+              <p>Freelance</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/Nonik_Ice_Cream.png" data-gall="portfolioGallery" class="venobox" title="Freelance"><i class="bx bx-plus"></i></a>
                 <a href="Nonik.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
