--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h1><a href="index.html">Muhammad Kukuh.F</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a <span>Website Builder </span></h2>
+      <h2>I'm a <span>Wordpress Administator </span></h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -79,7 +79,7 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Programmer </h3>
+          <h3>Wordpress Administator </h3>
           <p class="font-italic">
             
           </p>
@@ -93,7 +93,7 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 24</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 25</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> mkukuh25@gmail.com</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
               </ul>
@@ -378,7 +378,7 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Pengalaman Kerja</h3>
           <div class="resume-item">
-            <h4>Web Master</h4>
+            <h4>Wordpress Administator</h4>
             <h5>Agustus,2022 - Sekarang</h5>
             <p><em>Global English Pare</em></p>
             <p>
