--- a/index.html
+++ b/index.html
@@ -518,6 +518,20 @@
             </div>
           </div>
         </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-freelance">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Nonik_Ice_Cream.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>PT Aneka Adhi Logam </h4>
+              <p>Freelance</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/ptanekaadhilogam.png" data-gall="portfolioGallery" class="venobox" title="Freelance"><i class="bx bx-plus"></i></a>
+                <a href="Nonik.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
         
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
