--- a/ptadhilogam.html
+++ b/ptadhilogam.html
@@ -48,7 +48,7 @@
           <div class="col-lg-8">
             <!-- <h2 class="portfolio-title">This is an example of portfolio detail</h2> -->
             <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/Nonik_Ice_Cream.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/ptanekaadhilogam.png" class="img-fluid" alt="">
 <!--               <img src="assets/img/portfolio/KoGoHP1.png" class="img-fluid" alt="">
               <img src="assets/img/portfolio/KoGoHP2.png" class="img-fluid" alt=""> -->
             </div>
@@ -60,7 +60,7 @@
               <li><strong>Category</strong>: Freelance</li>
               <!-- <li><strong>Client</strong>: ASU Company</li> -->
               <!--<li><strong>Project date</strong>: 10 Januari, 2023</li> -->
-              <li><strong>Project URL</strong>: <a href="https://nonikicecream.com/">Nonik Ice Cream</a></li>
+              <li><strong>Project URL</strong>: <a href="https://ptanekaadhilogam.com/">PT Aneka Adhi Logam</a></li>
             </ul>
 
             <!-- <p>
